..F....... [ZBX-16995] fixed widget vertically stretch
* commit 'caf3fae5cffed3edf82f691c68ef14ac5a6ec5cc':
  ..F....... [ZBX-16995] fixed widget vertically stretch

(cherry picked from commit 3e39404dcb5c978fe78670b3c0b76349bc5308df)

--- a/frontends/php/assets/styles/hc-light.css
+++ b/frontends/php/assets/styles/hc-light.css
@@ -42,7 +42,7 @@ body {
   line-height: 1.4em;
   color: #000;
   background-color: #fff;
-  margin-bottom: 60px;
+  margin-bottom: 71px;
   min-width: 1200px;
   font-family: Arial, Tahoma, Verdana, sans-serif;
   font-size: 75%; }
